2014-11-03: Original commit
2014-12-01: Changing name to cicserver
2014-12-09: Adding ICSurvey class
2014-12-17: Fixing cicserver-install-run path
2014-12-17: Fixed cic_icws_installed custom fact & minor fixes
2014-12-18: Adding missing loggedonuserpassword parameter
2014-12-19: Finetuning ic server install parameters
2014-12-19: Removing unnecessary files
2014-12-22: Using powershell instead of psexec
2014-12-22: Added ICServer dependency to Setup Assistant
2014-12-23: Fixed survey directory creation
2014-12-23: Using Start-Process to wait for msiexec to finish for CIC server install
2014-12-23: Using powershell script to install CIC server
2014-01-03: Replaced unless option by onlyif when running setup assistant
2015-01-15: No need to start the Interaction Center service after running setup assistant
2015-01-19: Changed how copies work. Now supports UNC paths and URLs
2015-01-20: Using cache_dir all the way
2015-01-22: Using package to install media server
2015-01-23: removed mediaserverlicensefile parameter
2015-01-27: Fixed media server license copy issue
2015-01-28: Set Interaction Center service to automatic
2015-01-30: Removing unnecessary script parameters
2015-02-08: Changing paths
2015-02-11: Removing hostid
2015-02-12: Linting changes
2015-03-04: Removing the need for the source parameter when installing CIC
2015-04-02: Changing how the ININ Media Server is started as it can timeout on slower machines
2015-04-23: Added support for imdisk
2015-05-29: Added support for CIC 2015 R3
2015-05-29: Also installing R3 Patch 2
2015-06-01: Moved template to a parameter
2015-06-03: Adding temporary fix to set the Notifier value correctly
2015-06-05: Renaming all registry entries that contain old server names before Setup Assistant starts
2015-07-01: Added CPU core check for media server license
2015-08-20: Added cicserver::user to create CIC users
2015-08-21: Added cicserver::workgroup to create CIC workgroups